--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 from dotenv import load_dotenv
 import os
+
 # Load environment variables from the .env file
 load_dotenv()
+
 # Access environment variables
-api_key = os.getenv('API_KEY')=27c5b202a2msha0e2c00c7201d00p124d2bjsn32689e70d1ae
+API_KEY = os.getenv('API_KEY')=27c5b202a2msha0e2c00c7201d00p124d2bjsn32689e70d1ae
